adjusted messages column

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="row inbox-row h-100">
             <!--Navigation Pane-->
     
-            <div class="col-xxl-1 col-xl-2 col-lg-2 col-sm-2 nav-pane">
+            <div class="col-xxl-2 col-xl-2 col-lg-2 col-sm-3 nav-pane">
             <p>Welcome, Brock!</p>
             <button type="button" class="btn btn-warning">COMPOSE</button>
             <br><br>
@@ -29,21 +29,21 @@
             <div class="col-xxl-4 col-xl-3 col-lg-4 col-sm-3 msg-pane">
             <input type="text" class="form-control" placeholder="Search for emails"><br>
                 <div class="container container-msgs">
-                    <p class="alignleft">LinkedIn</p><p class="alignright">02:45pm</p>
+                    <p class="alignleft">LinkedIn</p><p class="alignright">02:45pm</p><br>
                     You have a new connection request.
                 </div>
                 <div class="container container-msg-selected">
-                    <p class="alignleft">Michael Scott Daily Quotes</p><p class="alignright">Jul 3, 2020</p>
+                    <p class="alignleft">Michael Scott Daily Quotes</p><p class="alignright">Jul 3, 2020</p><br>
                     I'm optimistic because everyday I get a little more desperate.
                 </div>
                 <div class="container container-msgs">
-                    <p class="alignleft">LeMar Software</p><p class="alignright">Feb 9, 2020</p>
+                    <p class="alignleft">LeMar Software</p><p class="alignright">Feb 9, 2020</p><br>
                     Learn how you can give us money by calling (209) 322-7835.
                 </div>
             </div>
 
             <!--Reading Pane-->
-            <div class="col-xxl-7 col-xl-7 col-lg-6 col-sm-7 reading-pane">
+            <div class="col-xxl-6 col-xl-7 col-lg-6 col-sm-6 reading-pane">
             <p class="msg-header">To: taylor@lamarsoftware.io<br>
             From: re-reply@theofficenbc.com</p>
             <h3>Michael Scott Daily Quotes</h3><br>
